[package]
name = "tower-lsp-macros-f"
version = "0.9.0"
authors.workspace = true
description = "Internal procedural macros for tower-lsp-f"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
